force-app/main/default/objects/FinancialProduct__c/FinancialProduct__c.object-meta.xml
<CustomObject>
    <label>Financial Product</label>
    <nameField>
        <displayFormat>FP-{000000}</displayFormat>
        <label>Financial product name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>