force-app/main/default/objects/FinancialProduct__c/fields/ClosedDate__c.field-meta.xml
<CustomField>
    <fullName>ClosedDate__c</fullName>
    <description>To record the date we closed the account on our system. Nova service will update this date with today() when account is closed.</description>
    <label>Closed date</label>
    <type>Date</type>
</CustomField>