force-app/main/default/objects/FinancialProduct__c/fields/CustomProviderName__c.field-meta.xml
<CustomField>
    <fullName>CustomProviderName__c</fullName>
    <description>Text field to store the name of a custom provider if we don&#39;t hold this in our database at the time of creation.</description>
    <label>Custom provider name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>