force-app/main/default/objects/FinancialProduct__c/fields/FinancialProductType__c.field-meta.xml
<CustomField>
    <fullName>FinancialProductType__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Used to record the type of financial, related financial product types dictate the fields available on the financial product.
Available for input in portal and Salesforce.</description>
    <label>Financial Product Type</label>
    <referenceTo>FinancialProductType__c</referenceTo>
    <relationshipLabel>Financial Products</relationshipLabel>
    <relationshipName>Financial_Products</relationshipName>
    <type>Lookup</type>
</CustomField>