force-app/main/default/objects/FinancialProduct__c/fields/FixedTermEndDate__c.field-meta.xml
<CustomField>
    <fullName>FixedTermEndDate__c</fullName>
    <description>To record when the end of the account&apos;s fixed term. Only visible if the related financial product type specifies the account has a fixed term.</description>
    <label>Fixed term end date</label>
    <type>Date</type>
</CustomField>