force-app/main/default/objects/FinancialProduct__c/fields/FixedTermFormula__c.field-meta.xml
<CustomField>
    <fullName>FixedTermFormula__c</fullName>
    <description>If fixed term end date is populated, we know the account has a fixed term so this field should be Yes. Otherwise No.</description>
    <formula>IF(ISNULL(FixedTermEndDate__c),&quot;No&quot;,&quot;Yes&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Fixed term</label>
    <type>Text</type>
</CustomField>