force-app/main/default/objects/FinancialProduct__c/fields/Household__c.field-meta.xml
<CustomField>
    <fullName>Household__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to record the related household.</description>
    <label>Household</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Financial Products</relationshipLabel>
    <relationshipName>Financial_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>