force-app/main/default/objects/FinancialProduct__c/fields/InterestRate__c.field-meta.xml
<CustomField>
    <fullName>InterestRate__c</fullName>
    <description>Record the accounts interest rate as the actual value of 0-1. Only visible if the related financial product type specifies the product can have an interest rate.</description>
    <label>Interest rate</label>
    <precision>6</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>