force-app/main/default/objects/FinancialProduct__c/fields/InterestRateFormula__c.field-meta.xml
<CustomField>
    <fullName>InterestRateFormula__c</fullName>
    <description>Convert the interest rate value from a number between 0-1 to a percent. We use this value to display to the user.</description>
    <formula>InterestRate__c</formula>
    <label>Interest rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>