force-app/main/default/objects/FinancialProduct__c/fields/IssueNumber__c.field-meta.xml
<CustomField>
    <fullName>IssueNumber__c</fullName>
    <description>To record the unique issue number of the product. Planning can use the issue number to look up the conditions of the account.</description>
    <label>Issue Number</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>