force-app/main/default/objects/FinancialProduct__c/fields/NoticePeriodFormula__c.field-meta.xml
<CustomField>
    <fullName>NoticePeriodFormula__c</fullName>
    <description>If notice period days are populated, we know the account has a notice period so this field should be Yes. Otherwise No.</description>
    <formula>IF(ISNULL(NoticePeriodDays__c),&quot;No&quot;,&quot;Yes&quot;)</formula>
    <label>Notice period</label>
    <type>Text</type>
</CustomField>