force-app/main/default/objects/FinancialProduct__c/fields/PlatformLastModifiedDateTime__c.field-meta.xml
<CustomField>
    <fullName>PlatformLastModifiedDateTime__c</fullName>
    <description>To record the date and time the financial product record was last modified on the on the platform. This could either be the colleague or client on the portal.</description>
    <label>Platform last modified date time</label>
    <type>DateTime</type>
</CustomField>