force-app/main/default/objects/FinancialProduct__c/fields/PublicProviderList__c.field-meta.xml
<CustomField>
    <fullName>PublicProviderList__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Storing the provider of the financial product. If the provider is not listed in our database, the customer provider text must be populated.</description>
    <label>Public provider list</label>
    <referenceTo>Public_Provider_Names__c</referenceTo>
    <relationshipLabel>Financial Products</relationshipLabel>
    <relationshipName>Financial_Products1</relationshipName>
    <type>Lookup</type>
</CustomField>