force-app/main/default/objects/FinancialProduct__c/fields/ValuationStatusFormula__c.field-meta.xml
<CustomField>
    <fullName>ValuationStatusFormula__c</fullName>
    <description>Formula to display a green tick when valuation of account is in date and a warning flag if valuation is out of date.</description>
    <formula>IF(ValuationDate__c &gt;= ADDMONTHS(TODAY(), -3), IMAGE(&quot;/resource/ValueTick&quot;, &quot;Green&quot;, 25, 25),
IMAGE(&quot;/resource/ValueRefresh&quot;, &quot;Amber&quot;, 25, 25))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valuation status</label>
    <type>Text</type>
</CustomField>